Small bugfixes and the layout for the build configurator.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="country_prompt">Choose a country</string>
+    <string name="motherboard">Motherboard</string>
+    <string name="ram">RAM</string>
 
     <string-array name="gpu_list">
         <item>-NVIDIA-</item>
