Small bugfixes and the layout for the build configurator.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,22 @@
         <item>R9 370X</item>
         <item>R9 370</item>
     </string-array>
+    <string-array name="ram_list">
+        <item>4 GB</item>
+        <item>8 GB</item>
+        <item>16 GB</item>
+        <item>32 GB</item>
+        <item>64 GB</item>
+    </string-array>
+    <string-array name="storage_list">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+    </string-array>
 </resources>
